deployments/robot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-ro-robot
spec:
  selector:
    app: open-ro-robot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5555
